Presentación de wiki e index.html

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,8 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <br></br>
+    <p>Bienvenido a <%= title %></p>
+    <p> </p><a href="https://github.com/enanibus/nodepop/wiki">Consulta la documentación del API</a>
   </body>
 </html>
